✨ feat(collector): M5 — 그룹3 8서비스 insertBatchIsolated 전환, per-call try/catch 제거 (SPEC-COLLECTOR-INSERT-001 T-005)
🗿 MoAI <email@mo.ai.kr>